<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.justorder.MainActivity"
        android:background="#FFEBEE">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/just_order_what_s_your_order"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_name"
                android:gravity="center_horizontal"
                android:text="@string/what_s_your_order"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </RelativeLayout>


        <EditText
            android:id="@+id/name_edit_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_ur_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/mobile_no_edit_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/phone_no"
            android:inputType="phone" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:layout_marginLeft="16dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/increase" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/zero"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/decrease" />
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="16dp"
            android:text="@string/toppings"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chocolate_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/Chocolate"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/whipped_cream_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/whipped_cream"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="16dp"
            android:text="@string/price"
            android:gravity="center"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:text="@string/rs_0"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"/>

        <ImageButton
            android:id="@+id/send_order"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/custom_button_shape"
            android:contentDescription="@string/send_button"
            android:src="@drawable/ic_send_white_24dp"/>
    </LinearLayout>
</ScrollView>

